fix(component): navbar
when fixed z-index is too low on navbar

--- a/scss/_o-navbar.scss
+++ b/scss/_o-navbar.scss
@@ -6,7 +6,7 @@
 .fixed-header {
   position: fixed;
   top: 0;
-  z-index: 120;
+  z-index: $zindex-fixed;
   width: 100%;
 }
 
